# gpxlib

./: CMakeLists.txt  README.md  dist  examples.html  gpxlib.pc.in  index.html  manual.html  style.css
doxy/: annotated.html  classes.html  classgpx_1_1Bounds-members.html  classgpx_1_1Bounds.html  classgpx_1_1Copyright-members.html  classgpx_1_1Copyright.html  classgpx_1_1DGPSStation-members.html  classgpx_1_1DGPSStation.html  classgpx_1_1DateTime-members.html  classgpx_1_1DateTime.html  classgpx_1_1Decimal-members.html  classgpx_1_1Decimal.html  classgpx_1_1Degrees-members.html  classgpx_1_1Degrees.html  classgpx_1_1EMail-members.html  classgpx_1_1EMail.html  classgpx_1_1Extensions-members.html  classgpx_1_1Extensions.html  classgpx_1_1Fix-members.html  classgpx_1_1Fix.html  classgpx_1_1GPX-members.html  classgpx_1_1GPX.html  classgpx_1_1Latitude-members.html  classgpx_1_1Latitude.html  classgpx_1_1Link-members.html  classgpx_1_1Link.html  classgpx_1_1LinkList-members.html  classgpx_1_1LinkList.html  classgpx_1_1List-members.html  classgpx_1_1List.html  classgpx_1_1Longitude-members.html  classgpx_1_1Longitude.html  classgpx_1_1Metadata-members.html  classgpx_1_1Metadata.html  classgpx_1_1Node-members.html  classgpx_1_1Node.html  classgpx_1_1PT-members.html  classgpx_1_1PT.html  classgpx_1_1PTList-members.html  classgpx_1_1PTList.html  (+43 more)
examples/: CMakeLists.txt  gpxcsvtrk.cpp  gpxi.cpp  gpxls.cpp  gpxtest.cpp  gpxtrk.cpp  gpxtrkcon.cpp  gpxwpt.cpp  test.gpx
gpx/: Algorithm.cpp  Algorithm.h  Bounds.cpp  Bounds.h  CMakeLists.txt  Copyright.cpp  Copyright.h  DGPSStation.cpp  DGPSStation.h  DateTime.cpp  DateTime.h  Decimal.cpp  Decimal.h  Degrees.cpp  Degrees.h  EMail.cpp  EMail.h  Extensions.cpp  Extensions.h  Fix.cpp  Fix.h  GPX.cpp  GPX.h  Latitude.cpp  Latitude.h  Link.cpp  Link.h  LinkList.cpp  LinkList.h  List.h  Longitude.cpp  Longitude.h  Metadata.cpp  Metadata.h  Node.cpp  Node.h  PT.cpp  PT.h  PTList.cpp  PTList.h  (+38 more)
test/: CMakeLists.txt  gpxcheck.cpp
trunk/: CMakeLists.txt
trunk/examples/: CMakeLists.txt  gpxls.cpp  gpxtrk.cpp
trunk/gpx/: CMakeLists.txt  Copyright.h  DGPSStation.cpp  DGPSStation.h  DateTime.cpp  DateTime.h  Degrees.cpp  EMail.cpp  GPX.cpp  GPX.h  Latitude.cpp  Longitude.h  Metadata.cpp  Metadata.h  Node.h  PT.cpp  PT.h  PTSeg.h  Parser.h  Person.cpp  Person.h  RTE.cpp  RTE.h  Unsigned.cpp  Unsigned.h  WPT.cpp  WPT.h  doxy.gpxlib
